Fixed Vertical alignment issue for big screens

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -33,8 +33,24 @@
 a.navbar-brand>img { position: relative; top: -29px; }
 /*Making the Navigation also 100% for all devices*/
 .navbar.navbar-inverse{ width: 100%; }
+/*logoBannerContent*/
+.logoBannerContent{
+  /*border: 1px solid red;*/
+  position: absolute;
+  clear: both;
+  margin: 0;
+  padding: 0;
+  height:100%;width:100%;
+  height: 92%;
+}
 /*Because of the static position of the BigVideo - applying absolute position to the main content*/
-.mainContent{ position: relative; top:580px; }
+.mainContent{ position: absolute;
+  top:100%;
+  left: 5%;
+  right:5%;
+  margin: 0; padding: 0;
+}
+
 .mainContent h2,.btn{font-family: 'weblysleek', sans-serif;text-align: center;}
 .mainContent h2>small{color: inherit;}
 video { display: block; }
@@ -75,7 +91,7 @@ video { display: block; }
     font-family: 'weblysleek', sans-serif;
     /*border: 1px solid red;*/
     background-position: 50% -125px;
-    font-size: 20px;
+    font-size: 17px;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left:0px;
@@ -90,6 +106,7 @@ video { display: block; }
     background-size: cover;
     /*z-index: -1;*/
     width: 100%;
+    min-height: 460px;
     padding: 0px 0px 0px 20px;
     /*padding-top: 120px;*/
     padding-bottom: 120px;
@@ -98,7 +115,13 @@ video { display: block; }
 #questionSection h3{ color: #fff; }
 #questionSection hr{ position: relative; left: -1%; display: block; margin: 0px 0px 20px 0px; }
 /*Intro*/
-#questionSection .introDiv { position: relative; }
+#questionSection .introDiv { position: absolute;
+left:1260px;
+padding-bottom: 15px;
+}
+/*Questions and Answers*/
+#questionSection .questionDiv { position: absolute;}
+
 
 /*Footer Section*/
 footer{ font-family: 'weblysleek', sans-serif; font-size: 16px; margin-top: 30px; }
